Mobile - Spacing Issues

--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ h3 {
         padding-top: 75px;
         padding-bottom: 30px;
     }
-    .course p{
+    .course-col p{
         font-size: 14px;
         padding: 0px;
     }
@@ -398,6 +398,9 @@ h3 {
     .testimonial-col img{
         margin-left: 0px;
         margin-right: 15px;
+    }
+    .testimonial-col p {
+        padding: 0px;
     }
 }
 
